--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 <body>
     <!-- <header>Live Car Parking Availability</header> -->
      <div class="header">
-        <h1>Live Car Park Availability</h1>
+        <h1>Live Car Park Availabilit</h1>
      </div>
     
 
