--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
     <div class="container">
         <h4><style>h4{color:rgb(0, 0, 0)}</style>No more Slots?</h4>
-        <h4><a href="./park/park1.html" target="_blank" >Click me !</h4></a>
+        <h4><a href="./park/park1-1.html" target="_blank" >Click me !</h4></a>
     </div>
     <footer>Concept Rev. Fr. Joby Varghese T.O.R <br> Powered by Daniel <br>St. Francis School Live Parking System &copy; 2025</footer>
 
