--- a/park/park2.html
+++ b/park/park2.html
@@ -97,7 +97,7 @@
     <div class="container">
         <h2>St.Mary's ITI, Valliyode Ground</h2>
         <a href="https://www.google.com/maps/dir/?api=1&destination=10.593211,76.50059" target="_blank"><h3>Ground Location !</h3></a>
-        <div class="status">Status: Fast Filling<br>Available Slots: 100</div>
+        <div class="status">Status: Sorry for the inconvenience <br>Available Slots:No Available slots</div>
 
         <div id="slots">
             <!-- Parking slots will be rendered here -->
